[project]
name = "signal-atak-bot"
version = "0.1.0"
description = "Signal bot that converts geolocation messages to Cursor on Target (CoT) XML and sends them to ATAK via UDP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
]

[project.scripts]
signal-atak-bot = "signal_atak_bot.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_atak_bot"]
